# AI_Dialogue_Freeze

./: CMakeLists.txt
ADF_Plugin/: CMakeLists.txt
ADF_Plugin/src/: ActorList.h  ActorLoadHandler.h  ConversationStartHandler.h  main.cpp
CLF4 variant/: CMakeLists.txt  CMakePresets.json
CLF4 variant/ADF_Plugin/src/: ActorLoadHandler.h
CLF4 variant/CommonLibF4/src/RE/NetImmerse/: NiPoint3.cpp
CLF4 variant/F4SEStub/loader/: CMakeLists.txt
CLF4 variant/F4SEStub/steam_loader/: CMakeLists.txt
CLF4 variant/RTTIDump/: CMakeLists.txt
Vanilla variant/: CMakeLists.txt
Vanilla variant/aidf/: CMakeLists.txt
Vanilla variant/aidf/src/: ActorLoadHandler.h  ConversationStartHandler.h  Events.h  main.cpp
